# benkyou

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: PRD.md  api.md  mcp-clients.md  plan_P0_0.md  plan_P0_1.md  plan_P0_2.md  plan_P1_0.md  plan_mcp_prompt.md  refactor.md  status.md
indexer/: image_utils.py  lesson_extractor.py  lesson_writer.py  manifest_writer.py  pdf_to_images.py  run.py  toc_extractor.py  toc_reader.py  toc_writer.py
mcp_server/: __init__.py  dictionary.py  question_parser.py  readers.py  server.py
tests/: test_lesson_extractor.py  test_lesson_writer.py  test_manifest_writer.py  test_mcp_lookup_word.py  test_mcp_question_parser.py  test_mcp_readers.py  test_mcp_server.py  test_pdf_to_images.py  test_run_index.py  test_run_toc.py  test_toc_extractor.py  test_toc_reader.py  test_toc_writer.py
