[project]
name = "benkyou"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
    "mcp>=1.0.0",
    "jamdict",
    "jamdict-data",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
